--- a/DataLoader.ipynb
+++ b/DataLoader.ipynb
@@ -2,8 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 331,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.9.0\n",
+      "{'server': {'name': 'localhost', 'user': 'sa', 'password': 'Passw0rd!', 'database': 'Loans_2023_01_27'}, 'tables': [{'name': 'dbo.UnderwritingData', 'primary': 'VIN', 'secondary': 'CreaditScore', 'null_secondary': 0}, {'name': 'dbo.RawAlgorithmData', 'primary': 'Vin6', 'secondary': 'Score', 'null_secondary': 0}], 'predictions': {'target': 'ProcStatsCd', 'replace': {'CL': 1, 'CO': 0}, 'doSpecial': True, 'special': 'DelqPct'}, 'ignore': ['Class_', 'AccountShort', 'CustomerNumber', 'CurBalAmt', 'Customer', 'AdminStatus', 'NumberPmnt', 'NumberPmnt', 'ResultCD', 'ChargeOffDt', 'PercentageOfPaymentsMade', 'DelqCalcAlert', 'RecyCalcAlert', 'ApplicationNumber', 'CurrentPaymentsMade', 'Name'], 'outliers': {'ignore': ['Status', 'DelqPct', 'CreaditScore', 'HomeOwner', 'Reposessions', 'Chageoff', 'APR']}}\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import pandas as pd\n",
@@ -45,7 +54,9 @@
     "from sklearn.neighbors import KNeighborsClassifier, NeighborhoodComponentsAnalysis\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from mpl_toolkits import mplot3d\n",
-    "\n",
+    "import yaml\n",
+    "from scipy.stats import pearsonr\n",
+    "import decimal\n",
     "\n",
     "random_state = 2023\n",
     "\n",
@@ -54,7 +65,14 @@
     "\n",
     "print(tf.__version__)\n",
     "# To make the results reproducible, set the random seed value.\n",
-    "tf.random.set_seed(22)"
+    "tf.random.set_seed(22)\n",
+    "\n",
+    "with open(\"config.yaml\") as f:\n",
+    "    config = yaml.load(f, Loader=yaml.FullLoader)\n",
+    "\n",
+    "server_info = config[\"server\"]\n",
+    "\n",
+    "print(config)"
    ],
    "metadata": {
     "collapsed": false,
@@ -65,7 +83,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 333,
+   "outputs": [],
+   "source": [
+    "class DatabaseLoader:\n",
+    "    def __init__(self, _server_info):\n",
+    "        _conn = pymssql.connect(server=server_info['name'], user=server_info['user'], password=server_info['password'], database=server_info['database'])\n",
+    "\n",
+    "        self._cursor = _conn.cursor()\n",
+    "        self._empty = True\n",
+    "        self.df = None\n",
+    "        self._global_primary = None\n",
+    "        self._global_secondary = None\n",
+    "        self._global_primary_type = None\n",
+    "        self._global_secondary_type = None\n",
+    "        self._target = None\n",
+    "        self._special_target = None\n",
+    "\n",
+    "    def get_column_index(self, _column_name):\n",
+    "        for index, col in enumerate(self._cursor.description):\n",
+    "            if col[0] == _column_name:\n",
+    "                return index\n",
+    "\n",
+    "    def replace_col_name(self, _cur_headers, _old, _new):\n",
+    "        for idx, header in enumerate(_cur_headers):\n",
+    "            if header==_old:\n",
+    "                _cur_headers[idx] = _new\n",
+    "\n",
+    "    def load_table(self, _table_info, ignore=None):\n",
+    "        if ignore is None:\n",
+    "            ignore = []\n",
+    "        self._cursor.execute(\"SELECT * FROM {table}\".format(table=_table_info['name']))\n",
+    "\n",
+    "        _headers = []\n",
+    "        _rows = []\n",
+    "\n",
+    "        for entity in self._cursor.description:\n",
+    "            _headers.append(entity[0])\n",
+    "\n",
+    "        _primary_index = self.get_column_index(_table_info['primary'])\n",
+    "        _secondary_index = self.get_column_index(_table_info['secondary'])\n",
+    "\n",
+    "        _res = self._cursor.fetchone()\n",
+    "        while _res:\n",
+    "            _row = [element for element in _res]\n",
+    "            if _row[_primary_index] is not None and _row[_primary_index].strip() != \"n/a\" and _row[_secondary_index] != _table_info['null_secondary']:\n",
+    "                # Strips trailing whitespace from strings\n",
+    "                for idx, item in enumerate(_row):\n",
+    "                    if isinstance(item, str):\n",
+    "                        _row[idx] = item.strip()\n",
+    "\n",
+    "                    if isinstance(item, decimal.Decimal):\n",
+    "                        _row[idx] = float(item)\n",
+    "\n",
+    "                _rows.append(_row)\n",
+    "            _res = self._cursor.fetchone()\n",
+    "\n",
+    "        if self._empty:\n",
+    "            self._empty = False\n",
+    "            self.df = pd.DataFrame(_rows, columns=_headers)\n",
+    "            self._global_primary = _table_info['primary']\n",
+    "            self._global_secondary = _table_info['secondary']\n",
+    "            self._global_primary_type = type(self.df[self._global_primary].iloc[0])\n",
+    "            self._global_secondary_type = type(self.df[self._global_secondary].iloc[0])\n",
+    "        else:\n",
+    "            # Replace the primary and secondary key column names with the global primary and secondary key names\n",
+    "            self.replace_col_name(_headers, _table_info['primary'], self._global_primary)\n",
+    "            self.replace_col_name(_headers, _table_info['secondary'], self._global_secondary)\n",
+    "\n",
+    "            temp_df = pd.DataFrame(_rows, columns = _headers)\n",
+    "            # Cast the primary and secondary keys to global type\n",
+    "            temp_df[self._global_primary] = temp_df[self._global_primary].astype(self._global_primary_type)\n",
+    "            temp_df[self._global_secondary] = temp_df[self._global_secondary].astype(self._global_secondary_type)\n",
+    "\n",
+    "            self.df = pd.merge(temp_df, self.df, how = 'inner', on=['VIN', 'CreaditScore'])\n",
+    "\n",
+    "        # Remove any columns to ignore\n",
+    "        self.df = self.df.drop(labels = ignore, axis=1, errors='ignore')\n",
+    "\n",
+    "    def prune_for_target(self, _prediction_info):\n",
+    "        self._target = _prediction_info['target']\n",
+    "        _replace_guide = _prediction_info['replace']\n",
+    "\n",
+    "        self.df = self.df[self.df[self._target].isin(list(_replace_guide.keys()))]\n",
+    "        for key, value in _replace_guide.items():\n",
+    "            self.df[self._target].replace(to_replace=key, value=value, inplace=True)\n",
+    "\n",
+    "        # Move the target to the end of the dataframe\n",
+    "        cols = list(self.df.columns)\n",
+    "        cols.remove(self._target)\n",
+    "        cols.append(self._target)\n",
+    "        self.df = self.df[cols]\n",
+    "\n",
+    "        if _prediction_info['doSpecial']:\n",
+    "            if _prediction_info['special'] == 'DelqPct':\n",
+    "                self.df = self.df[self.df['OpeningBalance']!=0]\n",
+    "                self.df['DelqPct'] = self.df.apply(lambda row : (100*row['Delq'])/row['OpeningBalance'],axis=1)\n",
+    "\n",
+    "                # Remove the old target and Delq from the dataframe\n",
+    "                cols = list(self.df.columns)\n",
+    "                cols.remove(self._target)\n",
+    "                cols.remove(\"Delq\")\n",
+    "                self.df = self.df[cols]\n",
+    "                self._target = \"DelqPct\"\n",
+    "\n",
+    "\n",
+    "    def remove_majority_null(self, threshold = .7):\n",
+    "        total = len(self.df)\n",
+    "        cols_to_drop = []\n",
+    "        percents = []\n",
+    "        for column in self.df.columns:\n",
+    "            non_null_count = 0\n",
+    "            for idx, item in self.df[column].items():\n",
+    "                if item is not None:\n",
+    "                    non_null_count +=1\n",
+    "            percent = float(non_null_count)/float(total)\n",
+    "            if percent < threshold:\n",
+    "                cols_to_drop.append(column)\n",
+    "                percents.append((1-percent)*100)\n",
+    "\n",
+    "        self.df = self.df.drop(cols_to_drop, axis = 1)\n",
+    "        for idx, column in enumerate(cols_to_drop):\n",
+    "            print(\"Dropping {column} since {percent}% of entires were Null\".format(column=column, percent = percents[idx]))\n",
+    "\n",
+    "    def contains_null_or_is_categorical(self, series):\n",
+    "        if self.is_categorical(series):\n",
+    "            return True\n",
+    "\n",
+    "        for idx, item in series.items():\n",
+    "            if item is None:\n",
+    "                return True\n",
+    "\n",
+    "        return False\n",
+    "\n",
+    "    def get_type_series(self, series):\n",
+    "        for idx, item in series.items():\n",
+    "            if item is not None:\n",
+    "                return type(item)\n",
+    "        return None\n",
+    "\n",
+    "    def is_categorical(self, series):\n",
+    "        return self.get_type_series(series) == str\n",
+    "\n",
+    "    def get_correlated_entities(self, threshold = 0.1):\n",
+    "        corrs = dict()\n",
+    "        for col in self.df.columns:\n",
+    "            if col == self._target or self.contains_null_or_is_categorical(self.df[col]):\n",
+    "                continue\n",
+    "            corr, _ = pearsonr(self.df[col], self.df[self._target])\n",
+    "            corrs[col] = abs(corr)\n",
+    "\n",
+    "        corrs = {k: v for k, v in sorted(corrs.items(), key=lambda item: item[1])}\n",
+    "\n",
+    "        goodCols = []\n",
+    "\n",
+    "        for col, score in corrs.items():\n",
+    "            if score>=threshold:\n",
+    "                goodCols.append(col)\n",
+    "\n",
+    "        return df[goodCols]\n",
+    "\n",
+    "    def remove_outliers(self, lower_thresh = 0.00, upper_thresh = 0.999, ignore=None):\n",
+    "        if ignore is None:\n",
+    "            ignore = []\n",
+    "        for col in self.df.columns:\n",
+    "            if col in ignore or col==self._target or self.is_categorical(self.df[col]):\n",
+    "                continue\n",
+    "            percentiles = self.df[col].quantile([lower_thresh, upper_thresh]).values\n",
+    "            self.df.loc[self.df[col]<=percentiles[0], col] = percentiles[0]\n",
+    "            self.df.loc[self.df[col]>=percentiles[1], col] = percentiles[1]\n",
+    "\n",
+    "    def get_target_col(self):\n",
+    "        return self.df[self._target]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropping Discount since 100.0% of entires were Null\n",
+      "Dropping CustomScore since 44.52901998097051% of entires were Null\n",
+      "Most Correlated Columns\n",
+      "Index(['Salary_y', 'NinetyDaysDelinquent', 'OpenTotalInBadStatus',\n",
+      "       'CreaditScore', 'CashDown', 'Term', 'OrigTerm', 'Apr', 'OpeningBalance',\n",
+      "       'Recy'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nikhil/Documents/401/CODE/Scorelate/venv/lib/python3.10/site-packages/scipy/stats/_stats_py.py:4424: ConstantInputWarning: An input array is constant; the correlation coefficient is not defined.\n",
+      "  warnings.warn(stats.ConstantInputWarning(msg))\n"
+     ]
+    }
+   ],
+   "source": [
+    "dbl = DatabaseLoader(server_info)\n",
+    "\n",
+    "dbl.load_table(config['tables'][0], ignore=config['ignore'])\n",
+    "dbl.load_table(config['tables'][1], ignore=config['ignore'])\n",
+    "dbl.prune_for_target(config['predictions'])\n",
+    "dbl.remove_majority_null()\n",
+    "\n",
+    "corents = dbl.get_correlated_entities()\n",
+    "print(\"Most Correlated Columns\")\n",
+    "print(corents.columns)\n",
+    "\n",
+    "dbl.remove_outliers(ignore = config['outliers']['ignore'])\n",
+    "\n",
+    "\n",
+    "\n",
+    "# plt.scatter(df[\"CurrentPaymentsMade\"], df[\"DelqPct\"])\n",
+    "# plt.show()\n",
+    "\n",
+    "\n",
+    "# print(df)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
    "outputs": [],
    "source": [
     "def get_column_index(cursor, column_name):\n",
