--- a/DataLoader.ipynb
+++ b/DataLoader.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 408,
    "outputs": [],
    "source": [
     "class DatabaseLoader:\n",
@@ -290,6 +290,12 @@
     "        temp_df = self.df.copy(deep=True)\n",
     "        for cat in cat_attribs:\n",
     "            one_hot = pd.get_dummies(self.df[cat])\n",
+    "            for i in one_hot.columns:\n",
+    "                new_name = cat+i\n",
+    "                new_name = new_name.replace(\"[\", \"\")\n",
+    "                new_name = new_name.replace(\"]\", \"\")\n",
+    "                new_name = new_name.replace(\"<\", \"\")\n",
+    "                one_hot.rename(columns={i:new_name}, inplace=True)\n",
     "            temp_df = temp_df.drop(cat, axis=1)\n",
     "            temp_df = pd.concat([temp_df, one_hot], axis=1)\n",
     "\n",
@@ -308,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 409,
    "outputs": [
     {
      "name": "stdout",
@@ -348,33 +354,59 @@
       "13212           512   2850.00  1287.0        48  24.90        11500.00   \n",
       "13213           462   4300.00  1413.0        52  19.90        16001.94   \n",
       "\n",
-      "       Salary_y  EmploymentMonths  Term  Payment  ...  Booked  N  N  N  N  Y  \\\n",
-      "0        1600.0                 0    42      0.0  ...       1  1  1  1  1  0   \n",
-      "1        4604.0                 0    48      0.0  ...       1  1  1  1  1  0   \n",
-      "2        2800.0                 0    48      0.0  ...       1  1  1  1  1  0   \n",
-      "3        2395.0                 0    48      0.0  ...       1  1  1  1  1  0   \n",
-      "4        5903.0                 0    48      0.0  ...       1  1  1  1  0  0   \n",
-      "...         ...               ...   ...      ...  ...     ... .. .. .. .. ..   \n",
-      "13140    5000.0                 0    54      0.0  ...       1  1  1  1  1  0   \n",
-      "13164    2700.0                 0    46      0.0  ...       1  1  1  1  1  0   \n",
-      "13167    3640.0                 0    48      0.0  ...       1  1  1  1  1  0   \n",
-      "13212    1900.0                 0    48      0.0  ...       1  1  1  1  1  0   \n",
-      "13213    4333.0                 0    52      0.0  ...       1  1  1  1  1  0   \n",
+      "       Salary_y  EmploymentMonths  Term  Payment  ...  VehicleTypeTruck  \\\n",
+      "0        1600.0                 0    42      0.0  ...                 0   \n",
+      "1        4604.0                 0    48      0.0  ...                 0   \n",
+      "2        2800.0                 0    48      0.0  ...                 0   \n",
+      "3        2395.0                 0    48      0.0  ...                 0   \n",
+      "4        5903.0                 0    48      0.0  ...                 1   \n",
+      "...         ...               ...   ...      ...  ...               ...   \n",
+      "13140    5000.0                 0    54      0.0  ...                 0   \n",
+      "13164    2700.0                 0    46      0.0  ...                 0   \n",
+      "13167    3640.0                 0    48      0.0  ...                 0   \n",
+      "13212    1900.0                 0    48      0.0  ...                 0   \n",
+      "13213    4333.0                 0    52      0.0  ...                 0   \n",
       "\n",
-      "       Y  Y  Y    DelqPct  \n",
-      "0      0  0  0   0.000000  \n",
-      "1      0  0  0   0.000000  \n",
-      "2      0  0  0   0.000000  \n",
-      "3      0  0  0   0.000000  \n",
-      "4      0  0  1   0.000000  \n",
-      "...   .. .. ..        ...  \n",
-      "13140  0  0  0   0.748601  \n",
-      "13164  0  0  0   0.591304  \n",
-      "13167  0  0  0   0.000000  \n",
-      "13212  0  0  0  12.895652  \n",
-      "13213  0  0  0   9.286374  \n",
+      "       VehicleTypeVan  VehicleTypecompact SUV  VehicleTypesedan  \\\n",
+      "0                   0                       0                 0   \n",
+      "1                   0                       0                 0   \n",
+      "2                   0                       0                 0   \n",
+      "3                   0                       0                 0   \n",
+      "4                   0                       0                 0   \n",
+      "...               ...                     ...               ...   \n",
+      "13140               0                       0                 0   \n",
+      "13164               0                       0                 0   \n",
+      "13167               0                       0                 0   \n",
+      "13212               0                       0                 0   \n",
+      "13213               0                       0                 0   \n",
       "\n",
-      "[8408 rows x 48318 columns]\n"
+      "       VehicleTypesports car  VehicleTypetruck  ApplicationStatusBooked  \\\n",
+      "0                          0                 0                        1   \n",
+      "1                          0                 0                        1   \n",
+      "2                          0                 0                        1   \n",
+      "3                          0                 0                        1   \n",
+      "4                          0                 0                        1   \n",
+      "...                      ...               ...                      ...   \n",
+      "13140                      0                 0                        1   \n",
+      "13164                      0                 0                        1   \n",
+      "13167                      0                 0                        1   \n",
+      "13212                      0                 0                        1   \n",
+      "13213                      0                 0                        1   \n",
+      "\n",
+      "       HomeOwnerN  HomeOwnerY    DelqPct  \n",
+      "0               1           0   0.000000  \n",
+      "1               1           0   0.000000  \n",
+      "2               1           0   0.000000  \n",
+      "3               1           0   0.000000  \n",
+      "4               0           1   0.000000  \n",
+      "...           ...         ...        ...  \n",
+      "13140           1           0   0.748601  \n",
+      "13164           1           0   0.591304  \n",
+      "13167           1           0   0.000000  \n",
+      "13212           1           0  12.895652  \n",
+      "13213           1           0   9.286374  \n",
+      "\n",
+      "[8408 rows x 40032 columns]\n"
      ]
     }
    ],
