--- a/DataLoader.ipynb
+++ b/DataLoader.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 414,
    "outputs": [],
    "source": [
     "class DatabaseLoader:\n",
@@ -236,7 +236,8 @@
     "\n",
     "    def get_correlated_entities(self, threshold = 0.1, inplace= False):\n",
     "        corrs = dict()\n",
-    "        for col in self.df.columns:\n",
+    "        print(\"Computing Entity Correlations\")\n",
+    "        for col in tqdm(self.df.columns):\n",
     "            if col == self._target or self.contains_null_or_is_categorical(self.df[col]):\n",
     "                continue\n",
     "            corr, _ = pearsonr(self.df[col], self.df[self._target])\n",
@@ -249,6 +250,8 @@
     "        for col, score in corrs.items():\n",
     "            if score>=threshold:\n",
     "                goodCols.append(col)\n",
+    "\n",
+    "        print(goodCols)\n",
     "\n",
     "        if inplace:\n",
     "            goodCols.append(self._target)\n",
@@ -288,7 +291,8 @@
     "    def one_hot_dummies(self, inplace=False):\n",
     "        cat_attribs = self.get_categorical_vars()\n",
     "        temp_df = self.df.copy(deep=True)\n",
-    "        for cat in cat_attribs:\n",
+    "        print(\"One Hot Encoding\")\n",
+    "        for cat in tqdm(cat_attribs):\n",
     "            one_hot = pd.get_dummies(self.df[cat])\n",
     "            for i in one_hot.columns:\n",
     "                new_name = cat+i\n",
@@ -314,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 413,
    "outputs": [
     {
      "name": "stdout",
@@ -322,17 +326,14 @@
      "text": [
       "Dropping Discount since 100.0% of entires were Null\n",
       "Dropping CustomScore since 44.52901998097051% of entires were Null\n",
-      "Most Correlated Columns\n",
-      "Index(['Salary_y', 'NinetyDaysDelinquent', 'OpenTotalInBadStatus',\n",
-      "       'CreaditScore', 'CashDown', 'Term', 'OrigTerm', 'Apr', 'OpeningBalance',\n",
-      "       'Recy'],\n",
-      "      dtype='object')\n"
+      "One Hot Encoding\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "100%|██████████| 53/53 [00:29<00:00,  1.81it/s]\n",
       "/Users/nikhil/Documents/401/CODE/Scorelate/venv/lib/python3.10/site-packages/scipy/stats/_stats_py.py:4424: ConstantInputWarning: An input array is constant; the correlation coefficient is not defined.\n",
       "  warnings.warn(stats.ConstantInputWarning(msg))\n"
      ]
@@ -341,6 +342,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['NinetyDaysDelinquent', 'Salary_y', 'Salary_x', 'CreaditScore', 'Term', 'OrigTerm', 'Apr', 'OpeningBalance', 'Recy', 'OpenTotalInBadStatus', 'CashDown', 'DlrNameRELIABLE AUTO SALES', 'PayableHistoryB', 'PayableHistoryD', 'PayableHistoryA']\n",
       "       CreaditScore  Salary_x    Recy  OrigTerm    Apr  OpeningBalance  \\\n",
       "0               676    600.00   490.0        42  20.98         8231.24   \n",
       "1               532   9026.33   400.0        48  22.99        13048.40   \n",
@@ -418,22 +420,14 @@
     "dbl.prune_for_target(config['predictions'])\n",
     "dbl.remove_majority_null()\n",
     "\n",
-    "corents = dbl.get_correlated_entities()\n",
-    "print(\"Most Correlated Columns\")\n",
-    "print(corents.columns)\n",
-    "\n",
     "dbl.remove_outliers(ignore = config['outliers']['ignore'])\n",
     "\n",
-    "dbl.one_hot_dummies(True)\n",
+    "# dbl.one_hot_dummies(True)\n",
+    "# dbl.get_correlated_entities()\n",
+    "\n",
     "\n",
     "print(dbl.df)\n",
-    "# print(dbl.df)\n",
-    "\n",
-    "# plt.scatter(df[\"CurrentPaymentsMade\"], df[\"DelqPct\"])\n",
-    "# plt.show()\n",
-    "\n",
-    "\n",
-    "# print(df)\n"
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -456,19 +450,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 410,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/3 [00:00<?, ?it/s]"
+      "  0%|          | 0/3 [04:44<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[410], line 17\u001B[0m\n\u001B[1;32m     11\u001B[0m param \u001B[38;5;241m=\u001B[39m {\n\u001B[1;32m     12\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124meta\u001B[39m\u001B[38;5;124m'\u001B[39m: \u001B[38;5;241m0.01\u001B[39m,\n\u001B[1;32m     13\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mobjective\u001B[39m\u001B[38;5;124m'\u001B[39m: \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mreg:squarederror\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[1;32m     14\u001B[0m }\n\u001B[1;32m     15\u001B[0m epochs \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m500\u001B[39m\n\u001B[0;32m---> 17\u001B[0m model \u001B[38;5;241m=\u001B[39m \u001B[43mxgb\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtrain\u001B[49m\u001B[43m(\u001B[49m\u001B[43mparam\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtrain\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mepochs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     19\u001B[0m predictions \u001B[38;5;241m=\u001B[39m model\u001B[38;5;241m.\u001B[39mpredict(test)\n\u001B[1;32m     21\u001B[0m y \u001B[38;5;241m=\u001B[39m []\n",
+      "File \u001B[0;32m~/Documents/401/CODE/Scorelate/venv/lib/python3.10/site-packages/xgboost/core.py:620\u001B[0m, in \u001B[0;36mrequire_keyword_args.<locals>.throw_if.<locals>.inner_f\u001B[0;34m(*args, **kwargs)\u001B[0m\n\u001B[1;32m    618\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m k, arg \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mzip\u001B[39m(sig\u001B[38;5;241m.\u001B[39mparameters, args):\n\u001B[1;32m    619\u001B[0m     kwargs[k] \u001B[38;5;241m=\u001B[39m arg\n\u001B[0;32m--> 620\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mfunc\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/Documents/401/CODE/Scorelate/venv/lib/python3.10/site-packages/xgboost/training.py:185\u001B[0m, in \u001B[0;36mtrain\u001B[0;34m(params, dtrain, num_boost_round, evals, obj, feval, maximize, early_stopping_rounds, evals_result, verbose_eval, xgb_model, callbacks, custom_metric)\u001B[0m\n\u001B[1;32m    183\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m cb_container\u001B[38;5;241m.\u001B[39mbefore_iteration(bst, i, dtrain, evals):\n\u001B[1;32m    184\u001B[0m     \u001B[38;5;28;01mbreak\u001B[39;00m\n\u001B[0;32m--> 185\u001B[0m \u001B[43mbst\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mupdate\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdtrain\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mi\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mobj\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    186\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m cb_container\u001B[38;5;241m.\u001B[39mafter_iteration(bst, i, dtrain, evals):\n\u001B[1;32m    187\u001B[0m     \u001B[38;5;28;01mbreak\u001B[39;00m\n",
+      "File \u001B[0;32m~/Documents/401/CODE/Scorelate/venv/lib/python3.10/site-packages/xgboost/core.py:1918\u001B[0m, in \u001B[0;36mBooster.update\u001B[0;34m(self, dtrain, iteration, fobj)\u001B[0m\n\u001B[1;32m   1915\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_validate_dmatrix_features(dtrain)\n\u001B[1;32m   1917\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m fobj \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[0;32m-> 1918\u001B[0m     _check_call(\u001B[43m_LIB\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mXGBoosterUpdateOneIter\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mhandle\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m   1919\u001B[0m \u001B[43m                                            \u001B[49m\u001B[43mctypes\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mc_int\u001B[49m\u001B[43m(\u001B[49m\u001B[43miteration\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m   1920\u001B[0m \u001B[43m                                            \u001B[49m\u001B[43mdtrain\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mhandle\u001B[49m\u001B[43m)\u001B[49m)\n\u001B[1;32m   1921\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m   1922\u001B[0m     pred \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mpredict(dtrain, output_margin\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, training\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
    "source": [
     "xgdata = dbl.df.copy(deep=True)\n",
-    "\n",
     "\n",
     "accs = []\n",
     "for x in tqdm(range(3)):\n",
@@ -511,8 +518,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
