--- a/DataLoader.ipynb
+++ b/DataLoader.ipynb
@@ -599,7 +599,7 @@
     "# Now, we can run the model, which will append a prediction to customer\n",
     "testdf = testdbl.run_model(\"model.pkl\")\n",
     "\n",
-    "print(testdf)\n"
+    "print(testdf)"
    ],
    "metadata": {
     "collapsed": false,
