Slightly optimized standardize_categorical_column()

--- a/ServerCode.ipynb
+++ b/ServerCode.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
+    "ExecuteTime": {
+     "start_time": "2023-04-19T15:14:11.075816Z",
+     "end_time": "2023-04-19T15:14:13.456807Z"
     }
    },
    "outputs": [
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import decimal\n",
@@ -504,14 +505,15 @@
    ],
    "metadata": {
     "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+    "ExecuteTime": {
+     "start_time": "2023-04-19T15:14:13.479620Z",
+     "end_time": "2023-04-19T15:14:13.502992Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -538,14 +540,15 @@
    ],
    "metadata": {
     "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+    "ExecuteTime": {
+     "start_time": "2023-04-19T15:14:13.482934Z",
+     "end_time": "2023-04-19T15:14:15.742197Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# model = RandomForestClassifier(n_estimators = 1000)\n",
@@ -553,15 +556,70 @@
    ],
    "metadata": {
     "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+    "ExecuteTime": {
+     "start_time": "2023-04-19T15:14:15.743661Z",
+     "end_time": "2023-04-19T15:14:15.748916Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recy: 7.292190261704016\n",
+      "CreaditScore: 5.7612702587929805\n",
+      "Discount: 5.170114406712299\n",
+      "APR: 4.831536757753097\n",
+      "Salary_x: 4.695700385939686\n",
+      "LTV: 4.653481694703037\n",
+      "TradelinesTotal: 4.6398807669855175\n",
+      "OpeningBalance: 4.2471244501402206\n",
+      "Account180DaysPastDue: 4.1968206312036305\n",
+      "Apr: 4.031710554190731\n",
+      "OpenTotal: 3.961529106566761\n",
+      "VehicleYear: 3.9392328660477443\n",
+      "PaidAccounts: 3.5765169140479807\n",
+      "RentMortgage: 3.3112879104340514\n",
+      "Mileage: 3.134649712768921\n",
+      "PTI: 3.061295500225368\n",
+      "InquiresTotal: 2.9178952484943843\n",
+      "OpenAcctsInGoodStatus: 2.7176401479882912\n",
+      "Mortgage: 2.7034946394489623\n",
+      "LatePaymentHistory001260: 2.561296013230722\n",
+      "LatePaymentHistory25Plus90: 2.475854287372601\n",
+      "ClosedTotalTermsNotPaid: 2.11077766221738\n",
+      "OpenTotalInBadStatus: 2.070010207066927\n",
+      "Bankrupcies: 2.053524807712346\n",
+      "EmploymentMonths: 2.0428997099792845\n",
+      "OrigTerm: 2.0116570431096945\n",
+      "LatePaymentHistory001230: 1.733340644091467\n",
+      "CashDown: 1.7255420649193456\n",
+      "Was180DaysPastDue: 1.0666788289765425\n",
+      "Foreclosure: 0.5844716249441368\n",
+      "NinetyDaysDelinquent: 0.5159698129968898\n",
+      "Chageoff: 0.17520128686316963\n",
+      "Reposessions: 0.029403792371807527\n",
+      "TradelinesBalance: 0.0\n",
+      "Term: 0.0\n",
+      "Salary_y: 0.0\n",
+      "Payment: 0.0\n",
+      "MonthsAtHome: 0.0\n",
+      "LatePaymentHistory25Plus60: 0.0\n",
+      "LatePaymentHistory25Plus30: 0.0\n",
+      "LatePaymentHistory132490Plus: 0.0\n",
+      "LatePaymentHistory132460: 0.0\n",
+      "LatePaymentHistory132430: 0.0\n",
+      "LatePaymentHistory001290Plus: 0.0\n",
+      "InquiriesLast6Months: 0.0\n",
+      "DTI: 0.0\n",
+      "Account150DaysPastDue: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Now pretend we load data with no labels (i.e. customers that we want to predict)\n",
     "testdbl = DatabaseLoader(server_info)\n",
@@ -577,9 +635,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+    "ExecuteTime": {
+     "start_time": "2023-04-19T15:14:15.749616Z",
+     "end_time": "2023-04-19T15:14:19.415033Z"
     }
    }
   }
