Updated ServerCode imports

--- a/ServerCode.ipynb
+++ b/ServerCode.ipynb
@@ -20,55 +20,23 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "import pandas as pd\n",
     "import matplotlib\n",
-    "from matplotlib import pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import seaborn as sns\n",
-    "import sklearn.metrics as sk_metrics\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "import tempfile\n",
-    "import statsmodels.api as sm\n",
-    "import os\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "import pymssql as pss\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "from sklearn.exceptions import DataConversionWarning\n",
-    "from tensorflow import keras\n",
-    "import statsmodels.formula.api as smf\n",
-    "from sklearn import svm\n",
-    "from tensorflow.keras import layers\n",
-    "from sklearn.feature_selection import SelectKBest\n",
-    "from sklearn import metrics\n",
-    "import pymssql\n",
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.feature_selection import RFE\n",
     "from tqdm import tqdm\n",
-    "import numpy as np\n",
     "from tensorflow.python.ops.numpy_ops import np_config\n",
     "import math\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import SGDRegressor\n",
-    "import xgboost as xgb\n",
-    "from xgboost import XGBRegressor\n",
-    "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from xgboost import plot_importance\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
-    "from sklearn.neighbors import KNeighborsClassifier, NeighborhoodComponentsAnalysis\n",
     "import warnings\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "from mpl_toolkits import mplot3d\n",
     "import yaml\n",
     "from scipy.stats import pearsonr\n",
     "import decimal\n",
-    "from xgboost import XGBRegressor\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
-    "# Import the model we are using\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from collections import defaultdict\n",
     "from datetime import datetime\n",
@@ -80,11 +48,7 @@
     "random_state = 2023\n",
     "\n",
     "# Preset matplotlib figure sizes.\n",
-    "matplotlib.rcParams['figure.figsize'] = [9, 6]\n",
-    "\n",
-    "print(tf.__version__)\n",
-    "# To make the results reproducible, set the random seed value.\n",
-    "tf.random.set_seed(22)"
+    "matplotlib.rcParams['figure.figsize'] = [9, 6]"
    ]
   },
   {
@@ -92,27 +56,6 @@
    "execution_count": 92,
    "outputs": [],
    "source": [
-    "from sklearn.gaussian_process import GaussianProcessClassifier\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.linear_model import RidgeClassifier, LogisticRegression, SGDClassifier\n",
-    "import decimal\n",
-    "import math\n",
-    "import pickle\n",
-    "from collections import defaultdict\n",
-    "from datetime import datetime\n",
-    "import yaml\n",
-    "from matplotlib import pyplot\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.metrics import confusion_matrix, accuracy_score, f1_score\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from tqdm import tqdm\n",
-    "import pymssql as pss\n",
-    "from scipy.stats import pearsonr\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
     "class DatabaseLoader:\n",
     "    def __init__(self, _server_info):\n",
     "        _conn = pss.connect(server=_server_info['name'], user=_server_info['user'],\n",
@@ -712,6 +655,7 @@
     "\n",
     "# Now, we can run the model, which will append a prediction to customer\n",
     "testdf = testdbl.run_model(\"model.pkl\")\n",
+    "\n",
     "\n",
     "# We can also get the entity scores from the model\n",
     "testdbl.get_scores(plot=True, do_print=False)"
